--- a/ReservaHoteleriaApp/Views/IniciarSesionView.xaml
+++ b/ReservaHoteleriaApp/Views/IniciarSesionView.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class= "KioscoInformaticoApp.Views.IniciarSesionView"
-             xmlns:viewModels="clr-namespace:KioscoInformaticoApp.ViewModels"
+             x:Class= "ReservaHoteleriaApp.Views.IniciarSesionView"
+             xmlns:viewModels="clr-namespace:ReservaHoteleriaApp.ViewModels"
              Title="IniciarSesionView"
              NavigationPage.HasNavigationBar="False">
     <ContentPage.BindingContext>
-        <viewModels:IniciarSesionViewModel />
+        <viewModels:IniciarSesionViewModel/>
     </ContentPage.BindingContext>
     
     <ScrollView>
