Añadir gestión de habitaciones y eliminar usuarios
Se han añadido nuevas propiedades y métodos en `AddEditReservaViewModel.cs` para gestionar la selección de habitaciones y actualizar la información de la reserva en consecuencia. Se ha añadido un `Picker` en la vista de edición de reservas (`AddEditReservaView.xaml`) para permitir la selección del tipo de habitación. Se ha mejorado la interfaz de usuario en `ServiciosAdicionalesView.xaml` para hacerla más clara y organizada.

Se ha eliminado el controlador de usuarios (`RH_UsuariosController.cs`) y las referencias a la entidad `RH_Usuario` en el contexto de datos (`ReservaHoteleriaContext.cs`) y en los datos semilla. También se eliminaron las propiedades `UsuarioID` y `Usuario` de la clase `RH_Reserva`, así como las referencias a `RH_Usuario` en varios archivos de migración y configuración.

Se ha añadido un archivo auto-generado `20241113234159_InicioProyecto.Designer.cs` que contiene la definición del modelo de datos y la configuración de la base de datos para una migración de Entity Framework Core. Se han definido las entidades y sus relaciones, y se han añadido datos iniciales para cada una de las entidades.

--- a/ReservaHoteleriaApp/Views/AddEditReservaView.xaml
+++ b/ReservaHoteleriaApp/Views/AddEditReservaView.xaml
@@ -25,6 +25,12 @@
                Text="{Binding EstadoReserva}"
                HorizontalOptions="Center"
                VerticalOptions="Center"/>
+        <Picker Title="Tipo de Habitacion"
+        ItemsSource="{Binding Habitaciones}"
+        ItemDisplayBinding="{Binding TipoHabitacion}"
+        SelectedItem="{Binding SelectedHabitacion}"
+        HorizontalOptions="Center"
+        VerticalOptions="Center"/>
         <Button Text="Guardar"
                 Command="{Binding SaveReservaCommand}"
                 HorizontalOptions="Center"
