--- a/ReservaHoteleriaApp/ContentViews/FlyoutHeader.xaml
+++ b/ReservaHoteleriaApp/ContentViews/FlyoutHeader.xaml
@@ -4,7 +4,7 @@
              x:Class="ReservaHoteleriaApp.ContentViews.FlyoutHeader">
     <Grid BackgroundColor="Black">
         <Image Aspect="AspectFill" 
-         Source="xamarinstore.jpg" 
+         Source="photo.png" 
          Opacity="0.6" />
         <Label Text="Reservas Hoteleria" 
          TextColor="White" 
